# uniapi

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.yaml.template  docker-compose.yml  package-lock.json  plan.md  prd.md  progress.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-build.yml  docker-publish.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  schemas.py  settings.py
backend/app/api/: deps.py
backend/app/api/v1/: api_keys.py  gateway.py  logs.py  models.py  passthrough.py  providers.py  router.py  settings.py  stats.py
backend/app/core/: gateway.py  passthrough.py
backend/app/db/: session.py
backend/app/models/: __init__.py  api_key.py  model.py  provider.py  request_log.py  system_settings.py
backend/app/routes/: admin.py  gateway.py
backend/app/schemas/: __init__.py  api_key.py  model.py  provider.py  request_log.py  settings.py  stats.py
backend/app/services/: __init__.py  api_key_service.py  auth.py  config_service.py  error_format.py  freeze_manager.py  gateway_service.py  litellm_service.py  log_service.py  model_service.py  protocol_detector.py  provider_service.py  runtime.py  settings_service.py  stream_aggregate.py  url_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: gateway_matrix_test.mjs
uniapi/: __init__.py  __main__.py  app.py  config.py  http_client.py  provider_pool.py
(+34 files in other folders)
