[project]
name = "uniapi"
version = "0.1.0"
description = "Unified API gateway for large language model providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UniAPI Developers" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
uniapi = "uniapi.__main__:main"

[build-system]
requires = ["hatchling>=1.14.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
# Default sources (PyPI). Customize here if you mirror packages.
